Add graphic design portfolio section with K11 and MTR projects, update navigation and project ordering

--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Resume — Sharon Crypto UI/UX Designer</title>
-  <meta name="description" content="Sharon's resume - UI/UX Designer specializing in crypto wallets, DeFi, and NFT experiences." />
+  <title>Resume — Sharon UI/UX Designer</title>
+  <meta name="description" content="Sharon's resume - UI/UX Designer specializing in AI-powered experiences, e-commerce platforms, and innovative digital solutions." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
@@ -14,9 +14,9 @@
     .resume-container { max-width: 800px; margin: 0 auto; }
     .resume-header { text-align: center; margin-bottom: var(--space-5); }
     .resume-section { margin-bottom: var(--space-4); }
-    .resume-section h3 { color: var(--accent-blue); margin-bottom: var(--space-2); text-decoration: underline; }
-    .job-title { font-weight: 600; color: var(--text-strong); }
-    .company { color: var(--accent-pink); font-weight: 600; }
+    .resume-section h3 { color: var(--primary-purple); margin-bottom: var(--space-2); text-decoration: underline; }
+    .job-title { font-weight: 600; color: var(--text-primary); }
+    .company { color: var(--primary-pink); font-weight: 600; }
     .date { color: var(--text-muted); font-size: 14px; }
     .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: var(--space-2); }
     .skill-category { background: var(--glass); padding: var(--space-2); border-radius: var(--radius-md); }
