Update portfolio: Add WIN project, enhance resume, update images and styling

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
     <nav aria-label="primary">
       <ul class="nav-list">
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#journey">My Career Journey</a></li>
         <li><a href="#projects">UIUX Projects</a></li>
         <li><a href="#graphic-design">Graphic Design</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li class="nav-cta"><a class="neon-button" href="#contact">Contact</a></li>
+        <li><a href="#about">About ME</a></li>
+        <li class="nav-cta"><a class="neon-button" href="resume.html">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -46,16 +44,108 @@
       <div class="hero-grid">
         <div class="hero-copy">
           <h1>Hi There!👋🏻<br>This is Sharon</h1>
-          <p>With 3+ years crafting product designs, I weave AI-powered UX and sharp research into seamless experiences. Passionate about creating delightful, accessible, and impactful digital products that solve real user problems and drive business growth.</p>
+          <p>UI/UX Designer with 3+ years creating AI-powered experiences for 10M+ users at Watsons, K11, and MTR. I transform complex problems into intuitive, research-driven solutions that delight users and drive business impact.</p>
           <div class="hero-ctas">
             <a class="neon-button lift-on-hover" href="#projects">View Projects</a>
-            <a class="glass-chip lift-on-hover" href="#journey">My Career Journey</a>
+            <a class="glass-chip lift-on-hover" href="#about">About ME</a>
           </div>
         </div>
         <aside class="portrait-card" aria-label="Sharon portrait">
           <span class="portrait-ring-rect" aria-hidden="true"></span>
           <img class="portrait-photo" src="assets/images/common/sharon.jpeg" data-fallback="assets/img/profile-fallback.svg" onerror="this.onerror=null; this.src=this.dataset.fallback || 'assets/img/profile-fallback.svg';" alt="Sharon working on a laptop in a cafe" />
         </aside>
+      </div>
+    </section>
+
+
+
+    <section id="projects" class="section">
+      <h2>Selected Projects</h2>
+      <div class="grid">
+
+        <a class="project-card glass-card lift-on-hover" href="projects/watsons-ai-search-case-study.html">
+          <img class="project-image" src="assets/images/common/AI-search.png" alt="Watsons AI Search Enhancement project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Project</div>
+          <span class="project-badge">2024</span>
+          <div class="project-content">
+            <h3>Watsons AI Search Enhancement</h3>
+            <p>Redesigning search experience for 10M+ users through user research, information architecture, and intelligent filtering.</p>
+            <p class="tags">Tags: User Research, Information Architecture, Search UX</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="projects/o2o-beauty-booking-revamp.html">
+          <img class="project-image" src="assets/images/common/project-pic1.jpeg" alt="O+O Beauty booking system project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Project</div>
+          <span class="project-badge">2023-24</span>
+          <div class="project-content">
+            <h3>O2O Beauty Booking Revamp</h3>
+            <p>Simplifying complex booking flows through user journey mapping, wireframing, and iterative usability testing.</p>
+            <p class="tags">Tags: User Journey Mapping, Wireframing, Usability Testing</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="projects/WIN.html">
+          <img class="project-image" src="assets/images/win-partnership/win-thumbnail.png" alt="Watsons Partnership Website WIN project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Project</div>
+          <span class="project-badge">2024</span>
+          <div class="project-content">
+            <h3>Watsons Partnership Website - WIN</h3>
+            <p>Comprehensive design system for Watsons' WIN Partnership platform, featuring modern e-commerce patterns, brand consistency, and user experience excellence.</p>
+            <p class="tags">Tags: Design System, Partnership Platform, Brand Identity</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="https://www.figma.com/proto/iGUCZIuGaozfYopq3C8Pui/Watsons-My-Account-Page?page-id=0%3A1&node-id=1-2&viewport=373%2C398%2C0.29&t=e8Vn2LPen9oQAdsM-1&scaling=contain&content-scaling=responsive" target="_blank" rel="noopener noreferrer">
+          <img class="project-image" src="assets/images/common/project-pic4.jpeg" alt="Watsons My Account Page redesign project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Prototype</div>
+          <span class="project-badge">2024</span>
+          <div class="project-content">
+            <h3>Watsons My Account Page Redesign</h3>
+            <p>Redesigning the account management interface to improve user experience and streamline membership features.</p>
+            <p class="tags">Tags: Account Management, User Interface, Membership UX</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="projects/k11-case-study.html">
+          <img class="project-image" src="assets/images/common/project-pic2.jpeg" alt="K11 Spot the Avatar project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Project</div>
+          <span class="project-badge">2022</span>
+          <div class="project-content">
+            <h3>K11 Interactive Gamification</h3>
+            <p>Spot the Avatar - Designing engaging user journeys that bridge digital discovery with physical retail experiences.</p>
+            <p class="tags">Tags: Gamification, User Journey, O2O Experience</p>
+          </div>
+        </a>
+      </div>
+    </section>
+
+    <section id="graphic-design" class="section">
+      <h2>Graphic Design Works</h2>
+      <p>From digital marketing campaigns to brand visual storytelling, explore my creative journey in graphic design that complements my UX expertise.</p>
+      <div class="grid">
+
+        <a class="project-card glass-card lift-on-hover" href="projects/k11-graphic-design.html">
+          <img class="project-image" src="assets/images/graphic-design/k11-graphics/K11mallthumbnail.jpg" alt="K11 App Graphics & Event Promotion" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Work</div>
+          <span class="project-badge">2022</span>
+          <div class="project-content">
+            <h3>K11 App Graphics & Event Promotion</h3>
+            <p>Collaborated with design team to create pop-up banners and live stories for K11 MUSEA app, promoting events and features.</p>
+            <p class="tags">Tags: App Design, Event Promotion, Team Collaboration</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="projects/mtr-graphic-design.html">
+          <img class="project-image" src="assets/images/graphic-design/mtr-graphics/mtrshoppingcentrethumbnail2.jpg" alt="MTR Social Media Graphics" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Work</div>
+          <span class="project-badge">2022-23</span>
+          <div class="project-content">
+            <h3>MTR Social Media Graphics</h3>
+            <p>Created 95% of engaging graphics and content for Telford Plaza and Maritime Square social media accounts.</p>
+            <p class="tags">Tags: Social Media Design, Retail Marketing, Content Creation</p>
+          </div>
+        </a>
       </div>
     </section>
 
@@ -75,11 +165,8 @@
         <li><strong>Collaborative leadership</strong>: Praised for adaptability and pixel-perfect execution, I thrive in cross-functional teams, translating complex requirements into intuitive, delightful user experiences.</li>
       </ul>
 
-    </section>
-
-    <section id="journey" class="section journey-section">
       <div class="journey-header">
-        <h2 class="journey-title">MY CAREER JOURNEY</h2>
+        <h3 class="journey-title">MY CAREER JOURNEY</h3>
       </div>
       
       <div class="roadmap-timeline">
@@ -137,81 +224,12 @@
       </div>
     </section>
 
-    <section id="projects" class="section">
-      <h2>Selected Projects</h2>
-      <div class="grid">
-
-        <a class="project-card glass-card lift-on-hover" href="projects/watsons-ai-search-case-study.html">
-          <img class="project-image" src="assets/images/watsons-ai-search/ai-search-thumbnail.png" alt="Watsons AI Search Enhancement project preview" onerror="this.style.display='none'" />
-          <div class="project-overlay">View Project</div>
-          <span class="project-badge">2024</span>
-          <div class="project-content">
-            <h3>Watsons AI Search Enhancement</h3>
-            <p>Redesigning search experience for 10M+ users through user research, information architecture, and intelligent filtering.</p>
-            <p class="tags">Tags: User Research, Information Architecture, Search UX</p>
-          </div>
-        </a>
-
-        <a class="project-card glass-card lift-on-hover" href="projects/o2o-beauty-booking-revamp.html">
-          <img class="project-image" src="assets/images/common/project-pic1.jpeg" alt="O+O Beauty booking system project preview" onerror="this.style.display='none'" />
-          <div class="project-overlay">View Project</div>
-          <span class="project-badge">2023-24</span>
-          <div class="project-content">
-            <h3>O2O Beauty Booking Revamp</h3>
-            <p>Simplifying complex booking flows through user journey mapping, wireframing, and iterative usability testing.</p>
-            <p class="tags">Tags: User Journey Mapping, Wireframing, Usability Testing</p>
-          </div>
-        </a>
-
-        <a class="project-card glass-card lift-on-hover" href="projects/k11-case-study.html">
-          <img class="project-image" src="assets/images/common/project-pic2.jpeg" alt="K11 Spot the Avatar project preview" onerror="this.style.display='none'" />
-          <div class="project-overlay">View Project</div>
-          <span class="project-badge">2022</span>
-          <div class="project-content">
-            <h3>K11 Interactive Gamification</h3>
-            <p>Spot the Avatar - Designing engaging user journeys that bridge digital discovery with physical retail experiences.</p>
-            <p class="tags">Tags: Gamification, User Journey, O2O Experience</p>
-          </div>
-        </a>
-      </div>
-    </section>
-
-    <section id="graphic-design" class="section">
-      <h2>Graphic Design Works</h2>
-      <p>From digital marketing campaigns to brand visual storytelling, explore my creative journey in graphic design that complements my UX expertise.</p>
-      <div class="grid">
-
-        <a class="project-card glass-card lift-on-hover" href="projects/k11-graphic-design.html">
-          <img class="project-image" src="assets/images/graphic-design/k11-graphics/K11mallthumbnail.jpg" alt="K11 App Graphics & Event Promotion" onerror="this.style.display='none'" />
-          <div class="project-overlay">View Work</div>
-          <span class="project-badge">2022</span>
-          <div class="project-content">
-            <h3>K11 App Graphics & Event Promotion</h3>
-            <p>Collaborated with design team to create pop-up banners and live stories for K11 MUSEA app, promoting events and features.</p>
-            <p class="tags">Tags: App Design, Event Promotion, Team Collaboration</p>
-          </div>
-        </a>
-
-        <a class="project-card glass-card lift-on-hover" href="projects/mtr-graphic-design.html">
-          <img class="project-image" src="assets/images/graphic-design/mtr-graphics/mtrshoppingcentrethumbnail2.jpg" alt="MTR Social Media Graphics" onerror="this.style.display='none'" />
-          <div class="project-overlay">View Work</div>
-          <span class="project-badge">2022-23</span>
-          <div class="project-content">
-            <h3>MTR Social Media Graphics</h3>
-            <p>Created 95% of engaging graphics and content for Telford Plaza and Maritime Square social media accounts.</p>
-            <p class="tags">Tags: Social Media Design, Retail Marketing, Content Creation</p>
-          </div>
-        </a>
-      </div>
-    </section>
-
     <section id="contact" class="section">
       <div class="cta glass-card">
-        <p>I'm excited to bring my proven track record of user-centered design, technical collaboration, and business impact to innovative companies. Ready to help create digital experiences that are not just functional, but delightful and meaningful—bridging the gap between complex technology and everyday users. 
-Let's build the future of digital products together!</p>
+        <p>Ready to create exceptional digital experiences together? Let's connect!</p>
         <div class="cta-actions">
           <a class="neon-button" href="mailto:shannms423@gmail.com">Email Me</a>
-          <a class="glass-chip lift-on-hover" href="resume.html">Resume</a>
+          <a class="glass-chip lift-on-hover" href="resume.html">View Resume</a>
         </div>
       </div>
     </section>
@@ -225,7 +243,8 @@ Let's build the future of digital products together!</p>
     <a href="#home">Home</a>
     <a href="#projects">UIUX Projects</a>
     <a href="#graphic-design">Graphics</a>
-    <a href="#contact">Contact</a>
+    <a href="#about">About ME</a>
+    <a href="resume.html">Resume</a>
   </nav>
 
   <script src="assets/js/app.js" defer></script>
