Update portfolio: styling improvements and content updates

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         <li><strong>Self-taught innovator</strong>: Transitioned from social science to design, bringing a unique blend of user psychology and creative problem-solving to create meaningful, human-centered digital experiences.</li>
         <li><strong>E-commerce expertise</strong>: Scaled Watsons' platforms with ROI-driven UX, reducing cart abandonment and boosting engagement through data-informed design decisions and user journey optimization.</li>
         <li><strong>Multidisciplinary edge</strong>: My art background, graphic design expertise, and 300+ digital campaigns fuel designs that balance aesthetics, usability, and business impact—creating solutions that users love and businesses value.</li>
+        <li><strong>AI-accelerated workflow</strong>: Leverage Cursor to build interactive prototypes and streamline development, showcasing expertise in AI-powered tools for efficient, high-quality design delivery.</li>
         <li><strong>Collaborative leadership</strong>: Praised for adaptability and pixel-perfect execution, I thrive in cross-functional teams, translating complex requirements into intuitive, delightful user experiences.</li>
       </ul>
 
