Update portfolio: reorganize graphic design assets, add AI chatbot case study, and update styling

--- a/index.html
+++ b/index.html
@@ -66,11 +66,22 @@
         <a class="project-card glass-card lift-on-hover" href="projects/watsons-ai-search-case-study.html">
           <img class="project-image" src="assets/images/common/AI-search.png" alt="Watsons AI Search Enhancement project preview" onerror="this.style.display='none'" />
           <div class="project-overlay">View Project</div>
-          <span class="project-badge">2024</span>
+          <span class="project-badge">2024-2025</span>
           <div class="project-content">
             <h3>Watsons AI Search Enhancement</h3>
             <p>Redesigning search experience for 10M+ users through user research, information architecture, and intelligent filtering.</p>
             <p class="tags">Tags: User Research, Information Architecture, Search UX</p>
+          </div>
+        </a>
+
+        <a class="project-card glass-card lift-on-hover" href="projects/watsons-ai-chatbot-case-study.html">
+          <img class="project-image" src="assets/images/AI Chatbot/AIchatbot_thumbnail.png" alt="Watsons AI Chatbot project preview" onerror="this.style.display='none'" />
+          <div class="project-overlay">View Project</div>
+          <span class="project-badge">2025</span>
+          <div class="project-content">
+            <h3>Watsons AI Chatbot</h3>
+            <p>Enhancing customer experience through intelligent order management with 24/7 AI-powered support and seamless live agent handoff.</p>
+            <p class="tags">Tags: AI Chatbot, Customer Support, Conversation Design</p>
           </div>
         </a>
 
@@ -151,19 +162,13 @@
 
     <section id="about" class="glass-card section">
       <h2>About ME</h2>
-      <p>With over 2 years of UI/UX expertise honed at Watsons, Asia's leading health & beauty retailer, I've spearheaded end-to-end digital product design, creating impactful experiences for millions of users across diverse markets.</p>
+      <p>UI/UX Designer with 3+ years creating AI-powered experiences for 10M+ users at Watsons, K11, and MTR. I transform complex problems into intuitive, research-driven solutions that drive business impact.</p>
+      
       <ul class="bullets">
-        <li><strong>Designed cutting-edge interfaces</strong>: Led AI-driven search systems, AR experiences, and gamified campaigns at Watsons, driving engagement and conversion through intuitive, user-centered design solutions.</li>
-        <li><strong>Global UX research</strong>: Conducted 28+ user interviews across Thailand and Malaysia, uncovering insights to shape user-centric strategies and optimize digital experiences for diverse cultural contexts.</li>
-        <li><strong>Scalable digital experiences</strong>: Refined brand consistency for 10M+ users, creating seamless, accessible, and visually compelling experiences that balance user needs with business objectives.</li>
-      </ul>
-      <h3>Why I Excel in Modern UI/UX Design</h3>
-      <ul class="bullets">
-        <li><strong>Self-taught innovator</strong>: Transitioned from social science to design, bringing a unique blend of user psychology and creative problem-solving to create meaningful, human-centered digital experiences.</li>
-        <li><strong>E-commerce expertise</strong>: Scaled Watsons' platforms with ROI-driven UX, reducing cart abandonment and boosting engagement through data-informed design decisions and user journey optimization.</li>
-        <li><strong>Multidisciplinary edge</strong>: My art background, graphic design expertise, and 300+ digital campaigns fuel designs that balance aesthetics, usability, and business impact—creating solutions that users love and businesses value.</li>
-        <li><strong>AI-accelerated workflow</strong>: Leverage Cursor to build interactive prototypes and streamline development, showcasing expertise in AI-powered tools for efficient, high-quality design delivery.</li>
-        <li><strong>Collaborative leadership</strong>: Praised for adaptability and pixel-perfect execution, I thrive in cross-functional teams, translating complex requirements into intuitive, delightful user experiences.</li>
+        <li><strong>Global UX research + collaborative workflow</strong>: Conducted 28+ user interviews across Thailand and Malaysia, leading cross-functional teams to deliver user-centered design solutions at scale.</li>
+        <li><strong>Self-taught innovator</strong>: Transitioned from social science to design, bringing unique user psychology insights and creative problem-solving to human-centered digital experiences.</li>
+        <li><strong>AI-accelerated design</strong>: Leverage cutting-edge AI tools like Claude 4, Cursor and Grok for rapid prototyping and streamlined development, pioneering AI-driven search systems and AR experiences.</li>
+        <li><strong>Multidisciplinary edge</strong>: Art background + 300+ digital campaigns + e-commerce expertise = designs that balance aesthetics, usability, and ROI-driven business impact.</li>
       </ul>
 
       <div class="journey-header">
